Лаб 4/tests/semantic_errors/error5_wrong_builtin_args.listlang
list1 = [1, 2, 3];
result = len(list1, 5);